--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {  
+    font-family: 'Consolas', sans-serif;
+}
+
 body {
     background-color: rgba(153, 157, 158, 0.631);
 }
@@ -10,9 +14,14 @@ h1 {
     background-color: rgba(237, 237, 231, 0.64);
 }
 
+ul {
+    font-size: 100%;
+    list-style-image: linear-gradient(to left bottom, red, blue);
+}
+
    
 p {
-    font-size: 26px;
+    font-size: 20px;
     color: rgb(61, 107, 148);
 }
 
@@ -21,8 +30,5 @@ img {
     height: 150px;
     border: 1px solid rgb(34, 16, 16);
     object-fit: contain;
-    /*float: left;
-    margin-right: 7px;
-    */
     
 }
