--- a/style.css
+++ b/style.css
@@ -22,15 +22,23 @@ ul {
    
 p {
     font-size: 20px;
-    color: rgb(61, 107, 148);
+    color: rgb(14, 40, 63);
 }
+
+
 
 img {
     width: 200px;
     height: 150px;
     border: 1px solid rgb(34, 16, 16);
     object-fit: contain;
+    display: flex;
 }
+
+
+
+
+
 
 span{
     color:rgb(69, 30, 38);
@@ -46,8 +54,9 @@ div h4 em {
 
 .noticia {
     background-color: rgba(183, 233, 183, 0.525);
-    text-align: center;
+    text-align:start;
     color: black;
+    
 }
 
 h3 i {
