--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ p {
 }
 
 strong {
-    color: rgba(5, 215, 23, 0.999);
+    color: rgba(107, 76, 50, 0.692);
 }
 
 
@@ -81,6 +81,7 @@ h3 i {
 a {
     text-decoration: none;
 }
+
 
 
 
@@ -243,3 +244,88 @@ a {
 
 /*Tablet*/
 @media (min-width: 768px) {}
+
+/*Presentacion*/
+.title {
+    width: 75%;
+    margin: 10px 5%;
+    display: flex;
+    align-items: center;
+}
+
+.title__container {
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    height: 80%;
+    margin: auto 50px auto 0px;
+}
+
+.title__hola {
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 700;
+    font-size: 1.8rem;
+    margin-bottom: 1.4rem;
+}
+
+.title__soy {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.0rem;
+    line-height: 1.0rem;
+    margin-top: .5rem;
+    margin-bottom: 5px;
+}
+
+.title__network {
+    display: flex;
+    margin-top: 1.4rem;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.title__network__item {
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+/*-------------------*/
+
+.title__links {
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 500;
+    color: #333333;
+    transition: all 300ms;
+}
+
+.title__links:hover {
+    font-weight: 700;
+    text-decoration: underline;
+    color: rgb(0, 0, 0);
+}
+
+.title__profile {
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    margin: 1px;
+}
+
+.title__items--boton {
+    width: 100%;
+}
+
+
+/*RESPONSIVE*/
+
+@media screen and (max-width: 768px) {
+    .title__profile {
+        width: 150px;
+        height: 120px;
+        border-radius: 100%;
+        margin-left: -20px;
+
+    }
+
+}
