modifique los index

--- a/style.css
+++ b/style.css
@@ -68,14 +68,14 @@ div h4 em {
 }
 
 .noticia {
-    background-color: rgba(183, 233, 183, 0.525);
+    background-color: rgba(138, 144, 138, 0.473);
     text-align:start;
     color: black;
     
 }
 
 h3 i {
-    color: blueviolet;
+    color: rgba(24, 22, 28, 0.981);
 }
 
 a {
